# checkers-lambda

./: .gitignore  CMakeLists.txt  README.md  arbre.cpp  arbre.h  example_args.json  main.cpp  test.cpp  tools.h
api/: api.py  request_example.sh  test.json  test.py
